# mr-graph

./: .gitignore  LICENSE  README.md  design_philosophy.md  graph_sample.py  push_pypi.sh  requirements.txt  sample.py  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  mr_graph.rst
docs/source/getting_started/: concepts.rst  installation.rst  tutorial.rst
graph_flow/: graph.py  node.py
mr_graph/: graph.py  graphio.py  node.py  node_data_aggregator.py  node_data_class.py  node_data_tracker.py
prompt_flow/: graph.py  node.py
tests/: functions.py  test_datatypes.py  test_fan_in_graphs.py  test_fan_out_graphs.py  test_input_ouput.py  test_linear_graphs.py
