[metadata]
name = mr_graph
version = 0.1.1
author = Jeremy McMinis
author_email = jeremy@sawtoothdata.com
description = A graph definition execution library for async/sync python functions.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graph-flow
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    networkx==3.0
    openai==0.26.5
    pydantic==1.10.5
    requests==2.28.2
    uvloop==0.17.0
python_requires = >=3.7

