[metadata]
name = mr_graph
version = 0.2.1
author = Jeremy McMinis
author_email = jeremy@sawtoothdata.com
url = https://mr-graph.readthedocs.io/en/latest/
description = A graph definition execution library for async/sync python functions.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graph, mr_graph
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic > 1.0.0
python_requires = >=3.7

